# RelativisticRendering

glsl/: main.py  pyproject.toml  screen_quad.frag
python/: base_script.py  main.py  pyproject.toml  requirements.txt
